--- a/.github/configs/release_pull_request_template.erb
+++ b/.github/configs/release_pull_request_template.erb
@@ -1,5 +1,7 @@
 🚀 {リリースブランチ名}
 
+最終更新：<%= Time.now.strftime('%Y-%m-%d %H:%M') %>
+
 <% server_prs = pull_requests.select { |pr| pr.labels.include?('server') } %>
 <% if server_prs.any? %>
 ## Server PRs
@@ -12,7 +14,7 @@
 <% if front_prs.any? %>
 ## Front PRs
 <% front_prs.each do |pr| -%>
-- #<%=  pr.number %> <%= pr.mention %>
+- #<%=  pr.number %> <%= pr.author %>
 <% end -%>
 <% end %>
 
@@ -23,5 +25,3 @@
 - #<%=  pr.number %> <%= pr.mention %>
 <% end -%>
 <% end %>
-
-最終更新：<%= Time.now.strftime('%Y-%m-%d %H:%M') %>
