--- a/.github/configs/release_pull_request_template.erb
+++ b/.github/configs/release_pull_request_template.erb
@@ -2,26 +2,7 @@
 
 最終更新：<%= Time.now.strftime('%Y-%m-%d %H:%M') %>
 
-<% server_prs = pull_requests.select { |pr| pr.labels.include?('server') } %>
-<% if server_prs.any? %>
-## Server PRs
-<% server_prs.each do |pr| -%>
-- #<%=  pr.number %> <%= pr.author %>
+## マージされたPR
+<% pull_requests.each do |pr| -%>
+- #<%=  pr.number %> <%= pr.mention %>
 <% end -%>
-<% end %>
-
-<% front_prs = pull_requests.select { |pr| pr.labels.include?('front') } %>
-<% if front_prs.any? %>
-## Front PRs
-<% front_prs.each do |pr| -%>
-- #<%=  pr.number %> <%= pr.author %>
-<% end -%>
-<% end %>
-
-<% other_prs = pull_requests.select { |pr| !pr.labels.include?('server') && !pr.labels.include?('front') } %>
-<% if other_prs.any? %>
-## Other PRs
-<% other_prs.each do |pr| -%>
-- #<%=  pr.number %> <%= pr.author %>
-<% end -%>
-<% end %>
