:construction_worker: リリースPRテンプレートの最適化

--- a/.github/configs/pr-release-template.erb
+++ b/.github/configs/pr-release-template.erb
@@ -1,4 +1,4 @@
-🚀 <%= ENV['BRANCH_NAME'] %>
+🚀 [リリースブランチ] <%= ENV['BRANCH_NAME'] %>
 <% pull_requests.each do |pr| -%>
 - #<%=  pr.number %> <%= pr.mention %>
 <% end -%>
